# banking

./: CMakeLists.txt  README.md  Tools.cpp  Tools.h  banking.sqlite  client.cpp  messages.h  server.cpp
src/: Client.cpp  Client.h  Messages.h  Server.cpp  Server.h  Tools.h  messages.h
src/client/: main.cpp
src/server/: main.cpp
